"fixed overflow overlay"

--- a/index.css
+++ b/index.css
@@ -7,15 +7,14 @@
     font-size: 120%;
   }
 }
-html {
-  width: 100vw;
+html, body {
+  padding: 0;
+  margin: 0;
 }
 
 body {
   position: relative;
-  padding: 0;
-  margin: 0;
-  width: 100vw;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -522,7 +521,7 @@ img.blur {
   display: flex;
   min-height: calc(100vh - 70px);
   height: 100%;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
   color: white;
 }
