--- a/src/carousel/_carousel.scss
+++ b/src/carousel/_carousel.scss
@@ -6,7 +6,7 @@
     display: flex;
     min-height: calc(100vh - 70px);
     height: 100%;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     color: white; 
  
